--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "Maximilian Schwarzmueller",
   "license": "MIT",
   "dependencies": {
+    "babel-core": "^6.26.3",
     "react": "^15.2.1",
-    "react-dom": "^15.2.1"
+    "react-dom": "^15.2.1",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "babel-loader": "^6.2.4",
