--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^5.1.1",
     "react-time": "^4.3.0",
     "redux": "^4.0.4",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-loader": "^6.2.4",
